[package]
name = "bluesky-ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
bsky-sdk = "0.1.24"
atrium-api = "0.25.8"
ollama-rs = "0.3.4"
chrono = "0.4.38"
regex = "1.10.4"
html-escape = "0.2.13"
rand = "0.8.5"
